src/objects/Service_Code_Junction__c.object
<CustomObject>
    <description>Used with service codes object</description>
    <fields>
        <fullName>Child__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Child</label>
        <referenceTo>Service_Code__c</referenceTo>
        <relationshipLabel>Service Code Junctions (Service Code)</relationshipLabel>
        <relationshipName>Service_Code_Junctions1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Service_Code__c</referenceTo>
        <relationshipLabel>Service Code Junctions (Parent)</relationshipLabel>
        <relationshipName>Service_Code_Junctions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>Text(Child__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Unit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Service_Code__c.Type__c</field>
                <operation>equals</operation>
                <value>Unit</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Service_Code__c</referenceTo>
        <relationshipLabel>Service Code Junctions (Unit)</relationshipLabel>
        <relationshipName>Service_Code_Junctions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Code Junction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Child__c</columns>
        <columns>Parent__c</columns>
        <columns>Type__c</columns>
        <columns>Unit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Code Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Type_Not_Same_As_Parent_Type</fullName>
        <active>true</active>
        <errorConditionFormula>Text(Parent__r.Type__c) = Type__c</errorConditionFormula>
        <errorMessage>The parent type should not be the same as this records type. You are likely choosing the wrong Parent.</errorMessage>
    </validationRules>
</CustomObject>